Work on landscape views

--- a/myapp/src/index.html
+++ b/myapp/src/index.html
@@ -2,15 +2,35 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>TannerPhan</title>
+  <title>Tanner Phan</title>
   <base href="/">
-
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="keywords" content="fullstack and application sofware engineer based in Seattle Washington Tanner Phan "
+  <meta name="keywords" content="
+I'm an application developer. I focus on IoT applications and development.
+ I've had the fundamental backgrounds: Physics, Math, Computer Science in formal university undergrad education.
+  In 2015, I shifted my focus toward programming.
+   And by 2016, I was working on a startup with three other people that were, on average, 6 years older than me.
+    Of course the startup was unsuccessful. Nevertheless, I grew and learned a ton from building the startup.
+     After that I tried online learning through Udacity,
+      where I learned Neural Net and other Machine Learning techniques."
+
   <script src="node_modules/core-js/client/shim.min.js"></script>
   <script src="node_modules/web-animations.min.js"></script>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
 </head>
 <body>
   <app-root>Loading...</app-root>
 </body>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-93231520-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 </html>
