added banner to blog page

--- a/myapp/src/index.html
+++ b/myapp/src/index.html
@@ -3,7 +3,12 @@
 <head>
   <meta charset="utf-8">
   <title>Tanner Phan</title>
+
   <base href="/">
+  <meta property="og:title" content="Tanner Phan Software Developer">
+  <meta property="og:description" content="Sofware appilcation developer in Seattle.">
+  <meta property="og:image" content="">
+  <meta property="og:url" content="src/assets/medias.me.png">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="keywords" content="fullstack and application sofware engineer based in Seattle Washington Tanner Phan "
   <meta name="keywords" content="
@@ -16,7 +21,6 @@ I'm an application developer. I focus on IoT applications and development.
       where I learned Neural Net and other Machine Learning techniques."
 
   <script src="node_modules/core-js/client/shim.min.js"></script>
-  <script src="node_modules/web-animations.min.js"></script>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
 </head>
