add morse code component and serve. add design - code - create slogan '

--- a/myapp/src/index.html
+++ b/myapp/src/index.html
@@ -1,28 +1,20 @@
 <!doctype html>
-<html>
+<html lang='en'>
 <head>
+  <title>Tanner's Portfolio</title>
   <meta charset="utf-8">
-  <title>Tanner Phan</title>
-
   <base href="/">
-  <meta property="og:title" content="Tanner Phan Software Developer">
-  <meta property="og:description" content="Sofware appilcation developer in Seattle.">
-  <meta property="og:image" content="">
-  <meta property="og:url" content="src/assets/medias.me.png">
+  <meta property="title" content="Tanner's Portfolio">
+  <meta property="description" content="Tanner Phan is a software engineer based in Seattle.">
+  <meta property="image" content="https://avatars0.githubusercontent.com/u/7454655?v=4&s=400&u=32bbdc8b8f07edac89f7a63b8afcbb18d0629328">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="keywords" content="fullstack and application sofware engineer based in Seattle Washington Tanner Phan "
-  <meta name="keywords" content="
-I'm an application developer. I focus on IoT applications and development.
- I've had the fundamental backgrounds: Physics, Math, Computer Science in formal university undergrad education.
-  In 2015, I shifted my focus toward programming.
-   And by 2016, I was working on a startup with three other people that were, on average, 6 years older than me.
-    Of course the startup was unsuccessful. Nevertheless, I grew and learned a ton from building the startup.
-     After that I tried online learning through Udacity,
-      where I learned Neural Net and other Machine Learning techniques."
-
+  <meta name="keywords" content="full-stack, virtual reality, VR ,applications, software engineer,Seattle Washington, Tanner Phan">
+  <meta name="twitter:card" content="Tanner Phan is a software engineer based in Seattle." />
+  <meta property="og:description" content="Tanner Phan is a software engineer based in Seattle." />
+  <meta property="og:site_name" content="Tanner's Portfolio" />
+  <meta name="author" content="Tanner Phan">
   <script src="node_modules/core-js/client/shim.min.js"></script>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-
 </head>
 <body>
   <app-root>Loading...</app-root>
@@ -35,6 +27,18 @@ I'm an application developer. I focus on IoT applications and development.
 
   ga('create', 'UA-93231520-1', 'auto');
   ga('send', 'pageview');
-
+</script>
+<script type="application/ld+json">
+{
+  "@type": "Person",
+  "name": "Tanner Phan",
+  "url": "https://www.tannerphan.me",
+  "sameAs": [
+    "http://www.facebook.com/tandaman206",
+    "http://www.instagram.com/tann3rphan/",
+   "http://www.linkedin.com/in/tannerphan",
+    "http://twitter.com/tannerphan"
+  ]
+}
 </script>
 </html>
