change theme and layout scheme

--- a/myapp/src/index.html
+++ b/myapp/src/index.html
@@ -4,16 +4,16 @@
   <title>Tanner's Portfolio</title>
   <meta charset="utf-8">
   <base href="/">
-  <meta property="title" content="Tanner's Portfolio">
-  <meta property="description" content="Tanner Phan is a software engineer based in Seattle.">
-  <meta property="image" content="https://avatars0.githubusercontent.com/u/7454655?v=4&s=400&u=32bbdc8b8f07edac89f7a63b8afcbb18d0629328">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="keywords" content="full-stack, virtual reality, VR ,applications, software engineer,Seattle Washington, Tanner Phan">
+  <meta name="description" content="Tanner Phan is a software application developer based in Seattle.">
+  <meta name="keywords" content="tanner phan, Tanner, Phan, tannerphan, TannerPhan, full-stack, virtual reality, VR ,applications, software engineer,Seattle Washington, Tanner Phan">
   <meta name="twitter:card" content="Tanner Phan is a software engineer based in Seattle." />
-  <meta property="og:description" content="Tanner Phan is a software engineer based in Seattle." />
-  <meta property="og:site_name" content="Tanner's Portfolio" />
+  <meta name="title" content="Tanner's Portfolio">
+  <meta name="image" content="https://avatars0.githubusercontent.com/u/7454655?v=4&s=400&u=32bbdc8b8f07edac89f7a63b8afcbb18d0629328">
+  <meta name="og:description" content="Tanner Phan is a software engineer based in Seattle." />
+  <meta nam="og:site_name" content="Tanner's Portfolio" />
+
   <meta name="author" content="Tanner Phan">
-  <script src="node_modules/core-js/client/shim.min.js"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
